--- a/css/estilos.css
+++ b/css/estilos.css
@@ -156,7 +156,7 @@ p {
 .separador {
     width: 100%;
     height: 250px;
-    background-image: url('imgs/container-ship-596083_1920.jpg');
+    background-image: url('../imgs/container-ship-596083_1920.jpg');
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
